Se agrega un cambio al index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="pagina de venta productos suricata" />
     <meta
       name="keywords"
-      content="cupones, descuentos, promociones, productos, desayunos, hogar, salud, diversion,productos"
+      content="cupones, descuentos, promociones, productos, desayunos, hogar, salud, diversion,productos, otro producto"
     />
 
     <!-- CSS de BOOTSTRAP 4.6 -->
