--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#promotions">Promociones</a>
+              <a class="nav-link" href="#promotions">Promociones y servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#newsletter">Newsletter</a>
