Se cambio el valor

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="d-flex flex-row-reverse prices mt-2">
-                      <p class="discount">$12.990</p>
+                      <p class="discount">$12.9900000</p>
                       <p class="price-before">$30.990</p>
                     </div>
                   </div>
